EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/17/2010==
JJ: Added events for tradeskill failure and success

==07/14/2010==
Trevius: Hopefully fixed the issue for SoF+ clients alcohol consumption causing item loss.

==07/13/2010==
Derision: Azone2 - Fixed crash processing fungalforest and possibly other Underfoot V4 .eqg zones.
Derision: Azone2 - Culled placeable shrooms to reduce fungalforest .map from ~80 to ~20MB.

==07/11/2010==
Trevius: Live - Environmental damage is now functional on this client.

==07/08/2010==
gaeorn: fixed confusing and likely flawed logic in GetZoneForage()

==07/06/2010==
Trevius: Fix to prevent a potential item loss bug.
Trevius: Fix for Nimbus Particle Effects to make them appear properly.
JJ: Added $oncursor as an export to the parser.
JJ: Added ability for NPCs to use heading in waypoint table. Added option to use heading when adding waypoints in game (-h switch). NPCs will use in-stride heading if the default heading (-1) is used. Optional SQL included in the utils folder.

==06/24/2010==
Trevius: EVENT_CLICKDOOR should now always show the correct door ID from the $doorid export.
Trevius: Doors with IDs higher than 126 should now work.
Trevius: Added perm_effect and client fields to SpellEffect(effect, [duration, finish_delay, zone_wide, unk20, perm_effect, client]).

==06/23/2010==
KLS: Instances can use spawn conditions now, requires SQL change in required sql folder.  Also updating will wipe all current spawn condition variables so you'll want to make sure they're set in the new table. (ps instance_id=0 for base zones!)
KLS: Added expedition expire warning to dynamic zones that aren't LDoNs, requires conf change for SoF/SoD.

==06/22/2010==
gaeorn: replaced calls to rand() with calls to MakeRandomInt()

==06/20/2010==
KLS: Added command #maxskills to max your skills instead of having to #setskill everything for testing.
KLS: Implemented partial melee and spell runes.